--- a/RxMemo/ViewController/Base.lproj/Main.storyboard
+++ b/RxMemo/ViewController/Base.lproj/Main.storyboard
@@ -96,11 +96,36 @@
                     <view key="view" contentMode="scaleToFill" id="ufS-yY-bdU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QYd-Ig-FXh">
+                                <rect key="frame" x="0.0" y="97" width="414" height="765"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="QYd-Ig-FXh" firstAttribute="top" secondItem="MH0-Oo-Z6b" secondAttribute="top" constant="9" id="EKs-MY-z0B"/>
+                            <constraint firstItem="MH0-Oo-Z6b" firstAttribute="trailing" secondItem="QYd-Ig-FXh" secondAttribute="trailing" id="RlZ-7D-JJD"/>
+                            <constraint firstItem="QYd-Ig-FXh" firstAttribute="leading" secondItem="MH0-Oo-Z6b" secondAttribute="leading" id="Y4A-5R-NNu"/>
+                            <constraint firstItem="QYd-Ig-FXh" firstAttribute="top" secondItem="MH0-Oo-Z6b" secondAttribute="top" id="wI0-5o-Dg7"/>
+                            <constraint firstItem="MH0-Oo-Z6b" firstAttribute="bottom" secondItem="QYd-Ig-FXh" secondAttribute="bottom" id="xHK-3a-dvt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="MH0-Oo-Z6b"/>
                     </view>
-                    <navigationItem key="navigationItem" title="새 메모" id="Ux1-gU-VD2"/>
+                    <navigationItem key="navigationItem" title="새 메모" id="Ux1-gU-VD2">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="KVt-so-kJa"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="iuo-4t-HTL"/>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="cancelButton" destination="KVt-so-kJa" id="d24-r6-VHx"/>
+                        <outlet property="contentTextView" destination="QYd-Ig-FXh" id="nD1-1d-YiX"/>
+                        <outlet property="saveButton" destination="iuo-4t-HTL" id="W2P-Ie-ukJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="obG-H2-FkV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
